data/derived/comb/progs/unify/prog5334.ml.out
Characters 71-72:
  else mulByDigit (i-1 l);;
                     ^
Error: This expression has type int
       This is not a function; it cannot be applied.
